# mongodb-k8s-connection

./: .gitignore  README.md  WORKSPACE  mongodb.yaml  package.json
service/: BUILD.bazel  index.ts  ingress.yaml  service.yaml
